manual/v3.5.1/ja/html/_sources/filespecification/expertmode_ja/CalcMod_file_ja.rst.txt
.. highlight:: none

.. _Subsec:calcmod:

CalcModファイル
~~~~~~~~~~~~~~~

| 計算手法、計算モデル、出力モードを指定します。以下のようなフォーマットをしています。

::

    CalcType     0
    CalcModel    2
    CalcEigenVec 0

| 

ファイル形式
^^^^^^^^^^^^

[string01] [int01]

パラメータ
^^^^^^^^^^

-  :math:`[`\ string01\ :math:`]`

   **形式 :** string型 (固定)

   **説明 :** キーワードを指定します。

-  :math:`[`\ int01\ :math:`]`

   **形式 :** int型

   | **説明 :** キーワードにひも付けられるパラメータを指定します。

使用ルール
^^^^^^^^^^

本ファイルを使用するにあたってのルールは以下の通りです。

-  キーワードを記載後、半角空白を開けた後に整数値を書きます。

-  各キーワードは順不同に記述できます。

-  指定したキーワード、ファイルが存在しない場合はエラー終了します。

-  キーワードCalcType, CalcModelは省略できません。
   省略した場合はエラー終了します。

-  :math:`\#`\ で始まる行は読み飛ばされます。

 

キーワード
^^^^^^^^^^

次に各キーワードで指定されるパラメータに関して説明します。

-  ``CalcType``

   **形式 :** int型

   | **説明 :** 計算手法の指定を行います。
   | 0: Lanczos法
   | 1: mTPQ計算
   | 2: 全対角化
   | 3: LOBCG法
   | 4: 実時間発展
   | 5: cTPQ計算
   | を選択することができます。

-  ``CalcModel``

   **形式 :** int型

   | **説明 :** 計算モデルの指定を行います。
   | 0: fermion
     Hubbard模型(カノニカル：粒子数・\ :math:`S_z`\ 保存、粒子数・\ :math:`S_z`\ 非保存)
   | 1: スピン模型(カノニカル：\ :math:`S_z`\ 保存)
   | 2: 近藤模型(カノニカル：粒子数・\ :math:`S_z`\ 保存)
   | 3: fermion
     Hubbard模型(グランドカノニカル：粒子数・\ :math:`S_z`\ 非保存)
   | 4: スピン模型(グランドカノニカル：\ :math:`S_z`\ 非保存)
   | 5: 近藤模型(グランドカノニカル：粒子数・\ :math:`S_z`\ 非保存)
   | を選択することが出来ます。 ferimon
     Hubbard模型で粒子数保存・\ :math:`S_z`\ 非保存を選択する場合は、粒子数のみを指定することで計算が可能となります。

-  ``CalcEigenVec``

   **形式 :** int型 (デフォルト値 0)

   | **説明 :** 固有ベクトルを計算する際の手法の指定を行います。
   | 0: Lanczos法+CG法
     (Lanczos法での収束が十分でない場合にCG法での固有ベクトル計算が行われます)
   | 1: Lanczos法
   | で選択することが出来ます。

-  ``InitialVecType``

   **形式 :** int型 (デフォルト値 0)

   | **説明 :** 固有ベクトル(:math:`v0`)の初期値の型の指定を行います。
   | -1:実部、虚部ともに正規分布乱数で与えられます。したがって,規格化した初期ベクトルは :math:`N_{\rm H}` 次元の超球面上に一様分布したものとなります。
   | 0: 複素数(:math:`{\rm Re}[v0]\in[-1:1]`, :math:`{\rm Im}[v0]\in[-1:1]` ).
   | 1: 実数(:math:`{\rm Re}[v0]\in[-1:1]`, :math:`{\rm Im}[v0]=0`).
   | から選択することが出来ます。

-  ``OutputEigenVec``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** 固有ベクトルの出力の指定を行います。
   0: 出力なし
   1: 出力あり
   から選択することが出来ます。

-  ``InputEigenVec``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** 固有ベクトルの入力の指定を行います。
   0: 入力なし
   1: 入力あり
   から選択することが出来ます。

-  ``ReStart``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** 再計算用のモードを指定します。
   0: 再計算なし
   1: リスタートベクトル入力なし、出力あり
   2: リスタートベクトル入力あり、出力あり
   3: リスタートベクトル入力あり、出力なし
   から選択することが出来ます。

-  ``CalcSpec``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** 動的グリーン関数の計算モードを指定します。
   0: 動的グリーン関数の計算なし
   1: 入力ベクトル・励起状態生成ファイルを読み込み計算
   2: 三重対角行列の成分を読み込み再計算
   3: 三重対角行列の成分と再計算用ベクトルを出力
   4: 三重対角行列の成分と再計算用ベクトルを読み込み再計算
   5: 三重対角行列の成分と再計算用ベクトルを読み込み再計算・再出力
   から選択することが出来ます。

-  ``OutputHam``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** (FullDiag) ハミルトニアンの出力モードを指定します。
   0: 出力なし
   1: 出力あり
   から選択することが出来ます。

-  ``InputHam``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** (FullDiag) ハミルトニアンの入力モードを指定します。
   0: 入力なし
   1: 入力あり
   から選択することが出来ます。

-  ``OutputExcitedVec``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** 励起ベクトルの出力の指定を行います。
   0: 出力なし
   1: 出力あり
   から選択することが出来ます。

   
-  ``Scalapack``

   **形式 :** int型 (デフォルト値 0)

   | **説明 :** (FullDiag)
     全対角化計算でのScaLAPACKライブラリの使用有無を指定します。
   | 0: ScaLAPACKを使用しない。
   | 1: ScaLAPACKを使用する。
   | で選択することが出来ます。

-  ``NGPU``

   **形式 :** int型 (デフォルト値 2)

   **説明 :** (FullDiag)
   全対角化計算でのMAGMAライブラリを使用する場合のGPU数を指定します。
   なお、 :math:`{\mathcal H}\Phi` ではマルチノードでのGPU計算には対応していません。

.. raw:: latex

   \newpage
