manual/v3.7.0/ja/html/_sources/filespecification/expertmode_ja/CalcMod_file_ja.rst.txt
.. highlight:: none

.. _Subsec:calcmod:

CalcModファイル
~~~~~~~~~~~~~~~

| 計算手法、計算モデル、出力モードを指定します。以下のようなフォーマットをしています。

::

    CalcType     0
    CalcModel    2
    CalcEigenVec 0

| 

ファイル形式
^^^^^^^^^^^^

[string01] [int01]

パラメータ
^^^^^^^^^^

-  :math:`[`\ string01\ :math:`]`

   **形式 :** string型 (固定)

   **説明 :** キーワードを指定します。

-  :math:`[`\ int01\ :math:`]`

   **形式 :** int型

   | **説明 :** キーワードにひも付けられるパラメータを指定します。

使用ルール
^^^^^^^^^^

本ファイルを使用するにあたってのルールは以下の通りです。

-  キーワードを記載後、半角空白を開けた後に整数値を書きます。

-  各キーワードは順不同に記述できます。

-  指定したキーワード、ファイルが存在しない場合はエラー終了します。

-  キーワードCalcType, CalcModelは省略できません。
   省略した場合はエラー終了します。

-  :math:`\#`\ で始まる行は読み飛ばされます。

 

キーワード
^^^^^^^^^^

次に各キーワードで指定されるパラメータに関して説明します。

-  ``CalcType``

   **形式 :** int型

   | **説明 :** 計算手法の指定を行います。
   | 0: Lanczos法
   | 1: mTPQ計算
   | 2: 全対角化
   | 3: LOBCG法
   | 4: 実時間発展
   | 5: cTPQ計算
   | を選択することができます。

-  ``CalcModel``

   **形式 :** int型

   | **説明 :** 計算モデルの指定を行います。
   | 0: fermion
     Hubbard模型(カノニカル：粒子数・\ :math:`S_z`\ 保存、粒子数・\ :math:`S_z`\ 非保存)
   | 1: スピン模型(カノニカル：\ :math:`S_z`\ 保存)
   | 2: 近藤模型(カノニカル：粒子数・\ :math:`S_z`\ 保存)
   | 3: fermion
     Hubbard模型(グランドカノニカル：粒子数・\ :math:`S_z`\ 非保存)
   | 4: スピン模型(グランドカノニカル：\ :math:`S_z`\ 非保存)
   | 5: 近藤模型(グランドカノニカル：粒子数・\ :math:`S_z`\ 非保存)
   | 7: スピンレスフェルミオン模型(カノニカル：粒子数保存)
   | 8: スピンレスフェルミオン模型(グランドカノニカル：粒子数非保存)
   | 9: :math:`t`-:math:`J`\ 模型(カノニカル：粒子数保存、または粒子数・\ :math:`S_z`\ 保存)
   | 10: :math:`t`-:math:`J`\ 模型(グランドカノニカル)
   | を選択することが出来ます。 fermion
     Hubbard模型で粒子数保存・\ :math:`S_z`\ 非保存を選択する場合は、粒子数のみを指定することで計算が可能となります。
   | :math:`t`-:math:`J`\ 模型(9, 10)は fermion
     Hubbard模型と同じく ``NCond`` / ``2Sz`` で保存量を選択します(カノニカル(9)で ``NCond`` のみを指定すると全電子数保存、``NCond`` と ``2Sz`` の両方を指定すると\ :math:`S_z`\ も保存)。二重占有した状態はヒルベルト空間から除外されます(各サイトの局所次元は空・上・下の3)。これらはエキスパートモードでのみ利用可能です。なお MPI 並列のプロセス数は、局所次元が3であっても fermion Hubbard模型と同じく4のべき乗(\ **3のべき乗ではありません**\ )です。これは内部表現が1サイトあたり4状態を保持するためです。
   | スピンレスフェルミオン模型では、Trans(ホッピング項)とCoulombInter(サイト間相互作用)のみが有効です。
     CoulombIntra, Hund, Exchange, PairHopはスピン自由度がないため使用できません。

-  ``CalcEigenVec``

   **形式 :** int型 (デフォルト値 0)

   | **説明 :** 固有ベクトルを計算する際の手法の指定を行います。
   | 0: Lanczos法+CG法
     (Lanczos法での収束が十分でない場合にCG法での固有ベクトル計算が行われます)
   | 1: Lanczos法
   | で選択することが出来ます。

-  ``InitialVecType``

   **形式 :** int型 (デフォルト値 0)

   | **説明 :** 固有ベクトル(:math:`v0`)の初期値の型の指定を行います。
   | -1:実部、虚部ともに正規分布乱数で与えられます。したがって,規格化した初期ベクトルは :math:`N_{\rm H}` 次元の超球面上に一様分布したものとなります。
   | 0: 複素数(:math:`{\rm Re}[v0]\in[-1:1]`, :math:`{\rm Im}[v0]\in[-1:1]` ).
   | 1: 実数(:math:`{\rm Re}[v0]\in[-1:1]`, :math:`{\rm Im}[v0]=0`).
   | から選択することが出来ます。

-  ``OutputEigenVec``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** 固有ベクトルの出力の指定を行います。
   0: 出力なし
   1: 出力あり
   から選択することが出来ます。

-  ``InputEigenVec``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** 固有ベクトルの入力の指定を行います。
   0: 入力なし
   1: 入力あり
   から選択することが出来ます。

-  ``ReStart``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** 再計算用のモードを指定します。
   0: 再計算なし
   1: リスタートベクトル入力なし、出力あり
   2: リスタートベクトル入力あり、出力あり
   3: リスタートベクトル入力あり、出力なし
   から選択することが出来ます。

-  ``CalcSpec``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** 動的グリーン関数の計算モードを指定します。
   0: 動的グリーン関数の計算なし
   1: 入力ベクトル・励起状態生成ファイルを読み込み計算
   2: 三重対角行列の成分を読み込み再計算
   3: 三重対角行列の成分と再計算用ベクトルを出力
   4: 三重対角行列の成分と再計算用ベクトルを読み込み再計算
   5: 三重対角行列の成分と再計算用ベクトルを読み込み再計算・再出力
   から選択することが出来ます。

-  ``OutputHam``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** (FullDiag) ハミルトニアンの出力モードを指定します。
   0: 出力なし
   1: 出力あり
   から選択することが出来ます。

-  ``InputHam``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** (FullDiag) ハミルトニアンの入力モードを指定します。
   0: 入力なし
   1: 入力あり
   から選択することが出来ます。

-  ``OutputExcitedVec``

   **形式 :** int型 (デフォルト値 0)

   **説明 :** 励起ベクトルの出力の指定を行います。
   0: 出力なし
   1: 出力あり
   から選択することが出来ます。

   
-  ``OutputDataHead``

   **形式 :** int型 (デフォルト値 0)

   | **説明 :** TPQ/TE計算の物理量出力ファイル (``SS``、``Norm``、``Flct``) のファイル名にModParaファイルの ``CDataFileHead`` で指定したヘッダ文字列をプレフィックスとして付与するかどうかを指定します。
   | 0: プレフィックスを付与しない (例: ``SS_rand0.dat``)。
   | 1: ``CDataFileHead`` のプレフィックスを付与する (例: ``zvo_SS_rand0.dat``)。
   | TPQ/cTPQで ``OutputGreenFormat=1`` を指定した場合、集約された物理量出力ファイル名は ``SS_tpq.dat``、``Norm_tpq.dat``、``Flct_tpq.dat`` になります。``OutputDataHead=1`` の場合は同様にこれらの名前へプレフィックスが付与されます。

-  ``OutputGreenFormat``

   **形式 :** int型 (デフォルト値 0)

   | **説明 :** Green関数出力ファイル、およびTPQ/cTPQの物理量出力ファイルの形式を指定します。
   | 0: 従来の分割ファイル形式。
   | 1: TPQ/cTPQ、実時間発展、全対角化、LOBCGで、index列付きの集約ファイル形式。
   | 集約形式では、TPQ/cTPQのGreen関数出力と物理量出力の各行の先頭に ``set`` と ``step``、実時間発展の各行の先頭に ``step``、全対角化/LOBCGの各行の先頭に ``eigen`` が追加されます。
   | TPQ/cTPQの物理量は ``SS_rand*.dat``、``Norm_rand*.dat``、``Flct_rand*.dat`` ではなく、``SS_tpq.dat``、``Norm_tpq.dat``、``Flct_tpq.dat`` に出力されます。
   | LOBCGの ``AnomalousG`` は既存出力が eigen 番号別ではないため、従来形式のまま出力されます。

-  ``Scalapack``

   **形式 :** int型 (デフォルト値 0)

   | **説明 :** (FullDiag)
     全対角化計算でのScaLAPACKライブラリの使用有無を指定します。
   | 0: ScaLAPACKを使用しない。
   | 1: ScaLAPACKを使用する。
   | で選択することが出来ます。

-  ``NGPU``

   **形式 :** int型 (デフォルト値 2)

   **説明 :** (FullDiag)
   全対角化計算でのMAGMAライブラリを使用する場合のGPU数を指定します。
   なお、 :math:`{\mathcal H}\Phi` ではマルチノードでのGPU計算には対応していません。

.. raw:: latex

   \newpage
